--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "rm -rf dist && webpack --progress --profile --colors",
     "c":"git commit -am 'update'",
     "p":"git push",
+    "u":"curl 'http://10.2.1.22:9923/pull?path=/www/rd09/static/JSBridge&to=master:master&from=origin'",
     "cp":"npm run c && npm run p",
-    "bcp":"npm run build && npm run c && npm run p"
+    "bcp":"npm run build && npm run c && npm run p",
+    "bcpu":"npm run build && npm run c && npm run p && npm run u"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
