--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "JSBridge",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lib/JSBridge.min.js",
   "author": "",
   "license": "ISC",
   "scripts": {
